@@ -1,3 +1,9 @@
+2011-03-16 11:05-EDT Ivan Vucica <ivucica@gmail.com>
+
+	* GGnomeThemeInitialization.m: Better choice of some FS icons.
+	* GNUmakefile: Initialize GNUSTEP_MAKEFILES if not initialized.
+	Patch applied by: greg.casamento@gmail.com
+
 2011-01-16 05:01-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GGnomeTheme.m
